--- a/leo-view/package.json
+++ b/leo-view/package.json
@@ -9,10 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.47"
+    "axios": "^1.4.0",
+    "element-plus": "^2.3.6",
+    "vue": "^3.2.47",
+    "vue-router": "^4.2.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-windicss": "^1.9.0",
+    "windicss": "^3.5.6"
   }
 }
