--- a/LeoSystem/pom.xml
+++ b/LeoSystem/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>mybatis-plus-core</artifactId>
             <version>3.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.5.21</version>
+        </dependency>
 
     </dependencies>
 
