--- a/LeoSystem/src/main/resources/application.yml
+++ b/LeoSystem/src/main/resources/application.yml
@@ -3,4 +3,4 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://localhost:3306/leo?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
     username: root
-    password: admin
+    password: root
