--- a/leo-view/package.json
+++ b/leo-view/package.json
@@ -13,6 +13,7 @@
     "@tinymce/tinymce-vue": "^5.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
+    "jquery": "^3.7.0",
     "tinymce": "^6.5.0",
     "vue": "^3.2.47",
     "vue-router": "^4.2.2",
